# phast

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.txt  MACINSTALL.txt  Makefile  README.md  README.txt  binary_install.sh  version
cmake/: phastConfig.cmake.in
include/: Makefile  bd_phylo_hmm.h  bed.h  bgc_hmm.h  category_map.h  complex.h  complex_matrix.h  complex_vector.h  dgamma.h  dmotif_indel_mod.h  dmotif_phmm.h  eigen.h  em.h  external_libs.h  fit_column.h  fit_em.h  fit_feature.h  gap_patterns.h  genepred.h  gff.h  hashtable.h  hmm.h  indel_history.h  indel_mod.h  list_of_lists.h  lists.h  local_alignment.h  maf.h  maf_block.h  markov_matrix.h  matrix.h  memory_handler.h  misc.h  motif.h  ms.h  msa.h  multi_msa.h  numerical_opt.h  pbs_code.h  phast_bd_phylo_hmm.h  (+80 more)
src/: CMakeLists.txt  Makefile  help.sed  help2man.pl  make-include.mk  munge-help.sh
src/dless/: Makefile  bd_phylo_hmm.c  dless.c  dless.doxy  dless.help  dless.help_src  dlessP.c  dlessP.help  dlessP.help_src  phast_bd_phylo_hmm.c
src/dmotif/: Makefile  dmTranslateToRealigned.c  dmTranslateToRealigned.help_src  dmcompare.c  dmcompare.help  dmcompare.help_src  dmcondition.c  dmcondition.help  dmcondition.help_src  dmotif.c  dmotif.help_src  dmotif_indel_mod.c  dmotif_phmm.c  dmsProcessParallel.c  dmsProcessParallel.help_src  dmsample.c  dmsample.help_src  dmsimulate.c  dmsimulate.help_src  pssm.c
src/exoniphy/: exoniphy.c  exoniphy.help  exoniphy.help_src  puzzler.c
src/lib/: CMakeLists.txt  Makefile
src/lib/base/: Makefile  base.doxy  complex.c  complex_matrix.c  complex_vector.c  eigen.c  hashtable.c  list_of_lists.c  lists.c  markov_matrix.c  matrix.c  memory_handler.c  misc.c  numerical_opt.c  phast_bitset.c  phast_complex_matrix.c  phast_complex_vector.c  phast_eigen.c  phast_hashtable.c  phast_heap.c  phast_list_of_lists.c  phast_lists.c  phast_markov_matrix.c  phast_matrix.c  phast_memory_handler.c  phast_misc.c  phast_multi_mvn.c  phast_mvn.c  phast_numerical_opt.c  phast_prob_matrix.c  phast_prob_vector.c  phast_sparse_matrix.c  phast_sparse_vector.c  phast_stringsplus.c  phast_vector.c  prob_matrix.c  prob_vector.c  pthr.c  queues.c  regex.c  (+3 more)
src/lib/feature/: Makefile  bed.c  category_map.c  feature.doxy  genepred.c  gff.c  phast_bed.c  phast_category_map.c  phast_genepred.c  phast_gff.c  phast_wig.c  wig.c
src/lib/hmm/: Makefile  em.c  hmm.c  phast_em.c  phast_hmm.c
src/lib/motif/: .Rhistory  Makefile  motif.c  phast_motif.c  phast_tfbs.c  tfbs.c
src/lib/msa/: .cvsignore  Makefile  local_alignment.c  maf.c  maf_block.c  msa.c  msa.doxy  multi_msa.c  phast_local_alignment.c  phast_maf.c  phast_maf_block.c  phast_msa.c  phast_multi_msa.c  phast_sufficient_stats.c  sufficient_stats.c
src/lib/pcre/: CMakeLists.txt  Makefile  config.h
src/lib/phylo/: Makefile  bgc_hmm.c  dgamma.c  fit_column.c  fit_em.c  fit_feature.c  indel_history.c  indel_mod.c  optimization_tree_likelihood.c  phast_adam_scheduler.c  phast_bgc_hmm.c  phast_cons.c  phast_crispr.c  phast_dgamma.c  phast_fit_column.c  phast_fit_em.c  phast_fit_feature.c  phast_indel_history.c  phast_indel_mod.c  phast_migration.c  phast_multiDAG.c  phast_multi_mvn.c  phast_nj.c  phast_phylo_fit.c  phast_phylo_p.c  phast_phylo_p_print.c  phast_planar_flow.c  phast_radial_flow.c  phast_rf.c  phast_subst_distrib.c  phast_subst_mods.c  phast_tree_likelihoods.c  phast_tree_model.c  phast_tree_prior.c  phast_trees.c  phast_upgma.c  phast_var_resampling.c  phylo.doxy  phylo_fit.c  phylo_p.c  (+6 more)
src/lib/phylo_hmm/: Makefile  gap_patterns.c  phast_gap_patterns.c  phast_phylo_hmm.c  phylo_hmm.c  puzzler.c
src/lib/rphast/: Makefile  NOTES  RPHAST.R  RPHAST_functions.txt  makePackage.sh  makelib.sh  objects.txt  phast_rph_util.c  rph_bgc_hmm.c  rph_category_map.c  rph_gff.c  rph_hmm.c  rph_list_of_lists.c  rph_lists.c  rph_msa.c  rph_phastCons.c  rph_phyloBoot.c  rph_phyloFit.c  rph_phyloP.c  rph_phylo_hmm.c  rph_subst_mods.c  rph_tfbs.c  rph_tree.c  rph_tree_model.c  rph_trees.c  rph_util.c  rph_wig.c  tfbs.c
src/lib/rphast/RPHAST/: DESCRIPTION  NAMESPACE
src/lib/rphast/RPHAST/R/: msa.R
src/lib/rphast/RPHAST/man/: msa-print.Rd  msa-summary.Rd  msa-validFormat.Rd  msa-write.Rd  msa.Rd
src/lib/rphast/src/: rph_msa.c
src/phastCons/: Makefile  phastCons.c  phastCons.help  phastCons.help_src  phast_cons.c
src/phastMotif/: Makefile  phastMotif.c
src/phastOdds/: Makefile  phastOdds.c  phastOdds.help  phastOdds.help_src
src/phyloBoot/: Makefile  phyloBoot.c  phyloBoot.help  phyloBoot.help_src
src/phyloFit/: Makefile  phyloFit.c  phyloFit.help  phyloFit.help_src  phylo_fit.c
src/phyloP/: Makefile  phyloP.c  phyloP.help  phyloP.help_src  phylo_p.c  printP.c
src/prequel/: Makefile  pbsDecode.c  pbsDecode.help  pbsDecode.help_src  pbsEncode.c  pbsEncode.help  pbsEncode.help_src  pbsScoreMatrix.c  pbsScoreMatrix.help  pbsScoreMatrix.help_src  pbsTrain.c  pbsTrain.help  pbsTrain.help_src  pbs_code.c  phast_pbs_code.c  phast_simplex_grid.c  prequel.c  prequel.doxy  prequel.help  prequel.help_src  simplex_grid.c
src/util/: Makefile  all_dists.c  base_evolve.c  base_evolve.help  base_evolve.help_src  chooseLines.c  clean_genes.c  clean_genes.help  clean_genes.help_src  consEntropy.c  consEntropy.help  consEntropy.help_src  convert_coords.c  display_rate_matrix.c  draw_tree.c  evalTrees.c  evalTrees.help_src  eval_predictions.c  findMafDiffs.c  generate_alignment.c  hmm_train.c  hmm_tweak.c  hmm_view.c  indelFit.c  indelFit.help  indelFit.help_src  indelHistory.c  indelHistory.help  indelHistory.help_src  maf_parse.c  makeHKY.c  makeHKY.help  makeHKY.help_src  merge_tree_models.c  modFreqs.c  modFreqs.help  modFreqs.help_src  msa_diff.c  msa_diff.help  msa_diff.help_src  (+29 more)
test/: Makefile  chr22.14500000-15500000.fa  chr22.14500000-15500000.gp  chr22.14500000-15500000.maf  elemcfa.bed  elements-4way_correct.bed  elements_correct.bed  f81.mod  hky-dg.mod  hky-em.mod  hky.mod  hmrc.ss  hmrc_correct.fa  hmrc_summary_correct  hpmrc-rev-dg-global.mod  hpmrc.fa  hpmrc.ss  jc.mod  rev-dg.mod  rev-em.mod  rev-gaps.mod  (+13 more)
(+306 files in other folders)
